--- a/app.json
+++ b/app.json
@@ -2,6 +2,8 @@
   "expo": {
     "name": "S.Y.C.O",
     "slug": "S.Y.C.O",
+    "scheme":"S.Y.C.O",
+
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,6 +24,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
